<resources>
    <string name="app_name">ToDo</string>
    <string name="todo">TODO</string>
    <string name="search">Search</string>
    <string name="sort">Sort</string>
    <string name="delete_all_completed">Delete all completed</string>
    <string name="sort_by_date_created">Sort by date created</string>
    <string name="sort_by_name">Sort by name</string>
    <string name="hide_completed">Hide completed</string>
    <string name="open_github">https://github.com/eominique/todo</string>
    <string name="github">github</string>
    <string name="about">About</string>
    <string name="to_do">ToDo</string>
    <string name="very_simple">very simple thing To-Do List help you \n to manege your daily life, without any hassle!</string>
    <string name="welcome">Welcome</string>
    <string name="picktheme">pickTheme</string>

</resources>