<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.about.AboutFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="208dp"
        android:layout_height="82dp"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="49dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/isotype" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="129dp"
            android:layout_height="31dp"
            android:text="@string/app_name" />

    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/github_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout">

    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:layout_width="401dp"
        android:layout_height="284dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="4dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.054">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="34dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_github_24" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:layout_marginStart="24dp"
                android:text="@string/github" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="391dp"
            android:layout_height="58dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="34dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:contentDescription="@string/todo" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:layout_marginStart="24dp"
                android:text="@string/picktheme" />

        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>